# slambench1

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  PAPI-README  README.md  myreadme.md  myreadme.txt
cmake/: FindOpenCL.cmake  FindOpenNI2.cmake  FindPAPI.cmake  FindSYCL.cmake  FindTooN.cmake
gui_doc/: GUI_doc.tex  SLAMBench_GUI.pptx
kfusion/: CMakeLists.txt
kfusion/include/: PowerMonitor.h  commons.h  default_parameters.h  draw.h  interface.h  kernels.h  tick.h
kfusion/include/sycl/: commons.h  interface.h  kernels.h
kfusion/qt/: ApplicationWindow.cpp  MainWindow.cpp  SlamBenchQt.cpp
kfusion/src/: PowerMonitor.cpp  benchmark.cpp  mainQt.cpp  reader.cpp
kfusion/src/cpp/: kernels.cpp
kfusion/src/cuda/: kernels.cu
kfusion/src/neon/: cutil_math.h  kernels.cpp  vector_types.h
kfusion/src/opencl/: common_opencl.cpp  common_opencl.h  kernels.cl  kernels.cpp
kfusion/src/sycl/: kernels.cpp
kfusion/sycl_cmake/: CMakeLists.txt
